[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_test_runner"]

[project]
name = "lovranran-mcp-test-runner"
version = "0.1.0"
description = "MCP server for running and normalizing local test results."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-json-report>=1.5",
    "ruff>=0.5",
]

[project.scripts]
mcp-test-runner = "mcp_test_runner.server:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["mcp_test_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
